getAdminStats, getAllPortfolios, enableUser, searchUsers eklendi ve fonksiyonlar eklendi